Fix the header z-index

--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,7 @@ code {
   position: fixed;
   left: 0;
   right: 0;
+  z-index: 9999;
 }
 
 .links-container {
